--- a/new_pages/collaboration.Rmd
+++ b/new_pages/collaboration.Rmd
@@ -591,7 +591,7 @@ git pull   # 将远程提交拉取本地分支
 git push   # 将此分支的本地提交推送到远程分支
 ```
 
-### 我希望拉取但是本地有一些不希望被覆盖的工作 {.unnumbered}
+### 我希望拉取但是本地已经有一些变更 {.unnumbered}
 
 有时会发生这种情况：您对本地资源库进行了一些更改，但远程资源库有您没有拉取的提交。
 
