--- a/new_pages/errors.Rmd
+++ b/new_pages/errors.Rmd
@@ -1,137 +1,99 @@
+# 常见错误
 
-# Common errors  
+此页面拥有一个包含常见错误的列表，并会给出一些关于这些问题的解决方案。
 
-This page includes a running list of common errors and suggests solutions for troubleshooting them.  
+## 解析错误消息
 
+R 错误有时可能很模糊，因此，为了理解R 报出的错误， Google 将会您最好的的朋友。 您可以搜索错误信息和 R 字符一起，并在 [StackExchange.com](StackExchange.com)、[community.rstudio.com](community.rstudio.com)、twitter (\#rstats) 和其他程序员用来提交问题和答案的论坛中查找最近的帖子。 您可以尝试查找解决了类似问题的帖子。
 
-## Interpreting error messages  
+如果您经过大量搜索后仍然找不到问题的答案，请考虑创建一个可重现的示例（"reprex"）并自己发布问题。 有关如何创建可重现示例并将其发布到论坛，请参见 [获取帮助] 页面。
 
-R errors can be cryptic at times, so Google is your friend. Search the error message with "R" and look for recent posts in [StackExchange.com](StackExchange.com), [stackoverflow.com](stackoverflow.com), [community.rstudio.com](community.rstudio.com), twitter (#rstats), and other forums used by programmers to filed questions and answers. Try to find recent posts that have solved similar problems.  
+## 常见错误
 
-If after much searching you cannot find an answer to your problem, consider creating a *reproducible example* ("reprex") and posting the question yourself. See the page on [Getting help] for tips on how to create and post a reproducible example to forums. 
+如下，我们列出了一些常见错误和潜在的解释/解决方案。 其中一些是从 Noam Ross 那里借鉴来的，他分析了 Stack Overflow 上关于 R 错误的常见论坛帖子（请参阅[此处](https://github.com/noamross/zero-dependency-problems/blob/master/misc/stack-overflow-common-r-errors.md)）。
 
+### 键入错误 {.unnumbered}
 
-## Common errors  
+    Error: unexpected symbol in:
+    "  geom_histogram(stat = "identity")+
+      tidyquant::geom_ma(n=7, size = 2, color = "red" lty"
 
-Below, we list some common errors and potential explanations/solutions. Some of these are borrowed from Noam Ross who analyzed the most common forum posts on Stack Overflow about R error messages (see analysis [here](https://github.com/noamross/zero-dependency-problems/blob/master/misc/stack-overflow-common-r-errors.md))  
+如果您看到 "unexpected symbol", 请检查是否缺少逗号。
 
+### Package 错误 {.unnumbered}
 
-### Typo errors {.unnumbered}  
+    could not find function "x"...
 
-```
-Error: unexpected symbol in:
-"  geom_histogram(stat = "identity")+
-  tidyquant::geom_ma(n=7, size = 2, color = "red" lty"
-```
-If you see "unexpected symbol", check for missing commas  
+这可能由于您输入了错误的函数名称，或者忘记安装或加载包。
 
+    Error in select(data, var) : unused argument (var)
 
-
-### Package errors {.unnumbered}  
-
-```
-could not find function "x"...
-```
-This likely means that you typed the function name incorrectly, or forgot to install or load a package.
-
-
-```
-Error in select(data, var) : unused argument (var)
-```
-You think you are using `dplyr::select()` but the `select()` function has been masked by `MASS::select()` - specify `dplyr::` or re-order your package loading so that dplyr is after all the others.
+您可能认为您正在使用 `dplyr::select()` 但 `select()` 函数已被 `MASS::select()` 屏蔽 - 您可以指定 `dplyr::` 或重新排序您的加载包，以便 dplyr 在所有其他函数之后。
 
 Other common masking errors stem from: `plyr::summarise()` and `stats::filter()`. Consider using the [**conflicted** package](https://www.tidyverse.org/blog/2018/06/conflicted/).
 
+其他常见的屏蔽错误还有使用：`plyr::summarise()` 和`stats::filter()`时。 您可能使用了[冲突的 package](https://www.tidyverse.org/blog/2018/06/conflicted/).。
 
+    Error in install.packages : ERROR: failed to lock directory ‘C:\Users\Name\Documents\R\win-library\4.0’ for modifying
+    Try removing ‘C:\Users\Name\Documents\R\win-library\4.0/00LOCK’
 
+如果您收到错误提示您需要删除"00LOCK"文件，请转到计算机目录中的"R" library（例如 R/win-library/）并查找名为"00LOCK"的文件夹。 手动删除它，然后再次尝试安装package 。 这可能是之前的安装过程被中断导致的。
 
-```
-Error in install.packages : ERROR: failed to lock directory ‘C:\Users\Name\Documents\R\win-library\4.0’ for modifying
-Try removing ‘C:\Users\Name\Documents\R\win-library\4.0/00LOCK’
-```
+### 对象错误 {.unnumbered}
 
-If you get an error saying you need to remove an "00LOCK" file, go to your "R" library in your computer directory (e.g. R/win-library/) and look for a folder called "00LOCK". Delete this manually, and try installing the package again. A previous install process was probably interrupted, which led to this.  
+    No such file or directory:
 
+如果您在尝试导出或导入时看到这样的错误：请检查文件和文件路径的拼写，如果路径包含斜杠，请确保它们是正向 `/` 而不是反向 `\`。 还要确保您使用了正确的文件扩展名（例如 .csv、.xlsx）。
 
+    object 'x' not found 
 
+这意味着您引用的对象不存在。 也许之前的代码没有正常运行？
 
-### Object errors {.unnumbered}  
+    Error in 'x': subscript out of bounds
 
-```
-No such file or directory:
-```
-If you see an error like this when you try to export or import: Check the spelling of the file and filepath, and if the path contains slashes make sure they are forward `/` and not backward `\`. Also make sure you used the correct file extension (e.g. .csv, .xlsx).  
+这意味着您试图访问不存在的东西（向量或列表的元素）。
 
+### 函数语法错误 {.unnumbered}
 
-```
-object 'x' not found 
-```
-This means that an object you are referencing does not exist. Perhaps code above did not run properly?  
+    # ran recode without re-stating the x variable in mutate(x = recode(x, OLD = NEW)
+    Error: Problem with `mutate()` input `hospital`.
+    x argument ".x" is missing, with no default
+    i Input `hospital` is `recode(...)`.
 
+上述错误（`argument .x is missing, with no default`）在 `mutate()`中很常见，当您在使用像 `recode()` 或 `replace_na()` 这样的函数，而它们希望您提供列名作为第一个参数，就会产生此错误。 这很容易忘记。
 
-```
-Error in 'x': subscript out of bounds
-```
-This means you tried to access something (an element of a vector or a list) that was not there.  
+### 逻辑错误 {.unnumbered}
 
+    Error in if
 
+这可能意味着一个 if 语句被应用于不是 TRUE 或 FALSE 的参数。
 
+### 因子错误 {.unnumbered}
 
-### Function syntax errors {.unnumbered}
+    #Tried to add a value ("Missing") to a factor (with replace_na operating on a factor)
+    Problem with `mutate()` input `age_cat`.
+    i invalid factor level, NA generated
+    i Input `age_cat` is `replace_na(age_cat, "Missing")`.invalid factor level, NA generated
 
-```
-# ran recode without re-stating the x variable in mutate(x = recode(x, OLD = NEW)
-Error: Problem with `mutate()` input `hospital`.
-x argument ".x" is missing, with no default
-i Input `hospital` is `recode(...)`.
-```
-This error above (`argument .x is missing, with no default`) is common in `mutate()` if you are supplying a function like `recode()` or `replace_na()` where it expects you to provide the column name as the first argument. This is easy to forget.  
+如果您看到有错误显示 invalid factor levels,，您可能有一个因子列（其中包含预定义的级别）并尝试向其添加新值。 在添加新值之前将其转换为 Character 。
 
+### 绘图错误 {.unnumbered}
 
+    Error: Insufficient values in manual scale. 3 needed but only 2 provided.ggplot() scale_fill_manual() values = c("orange", "purple") ... insufficient for number of factor levels ... consider whether NA is now a factor level...` 
+    Can't add x object
 
-### Logic errors {.unnumbered}  
+您可能在需要删除的 ggplot 命令末尾有一个额外的 `+` 。
 
-```
-Error in if
-```
+### R Markdown 错误 {.unnumbered}
 
-This likely means an `if` statement was applied to something that was not TRUE or FALSE.  
+如果错误消息包含`Error in options[[sprintf("fig.%s", i)]]`，请检查每个块顶部的 编译选项是否正确使用 `out.width =`或 `out.height =` ，而不是使用 `fig.width=` 和 `fig.height=`。
 
+### 其他错误 {.unnumbered}
 
-### Factor errors {.unnumbered}  
-
-```
-#Tried to add a value ("Missing") to a factor (with replace_na operating on a factor)
-Problem with `mutate()` input `age_cat`.
-i invalid factor level, NA generated
-i Input `age_cat` is `replace_na(age_cat, "Missing")`.invalid factor level, NA generated
-```
-If you see this error about invalid factor levels, you likely have a column of class Factor (which contains pre-defined levels) and tried to add a new value to it. Convert it to class Character before adding a new value.  
-
-
-### Plotting errors {.unnumbered}  
-
-`Error: Insufficient values in manual scale. 3 needed but only 2 provided.`
-ggplot() scale_fill_manual() values = c("orange", "purple") ... insufficient for number of factor levels ... consider whether NA is now a factor level...
-
-```
-Can't add x object
-```
-You probably have an extra `+` at the end of a ggplot command that you need to delete.
-
-
-### R Markdown errors {.unnumbered}  
-
-If the error message contains something like `Error in options[[sprintf("fig.%s", i)]]`, check that your knitr options at the top of each chunk correctly use the `out.width = ` or `out.height = ` and *not* `fig.width=` and `fig.height=`.
-
-### Miscellaneous {.unnumbered}  
-
-Consider whether you re-arranged piped **dplyr** verbs and didn't replace a pipe in the middle, or didn't remove a pipe from the end after re-arranging.
-
- 
-
+考虑检查下是否重新排列了dplyr 管道中的动词并且没有替换中间的管道，或者在重新排列后没有移除末端的管道。
 
 <!-- ======================================================= -->
-## Resources { }
 
-This is another blog post that lists common [R programming errors faced by beginners](https://www.r-bloggers.com/2016/06/common-r-programming-errors-faced-by-beginners/)
+## 资源
+
+这里有另一篇列出了[初学者面临的常见 R 编程错误](https://www.r-bloggers.com/2016/06/common-r-programming-errors-faced-by-beginners/)的博文。
